--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 sqlalchemy = "^2.0.38"
+sympy = "^1.14.0"
 python-dateutil = "^2.8.2"
 requests = "^2.32.3"
 flask = "^3.1.1"
